@@ -6,7 +6,7 @@ Authors@R: c(person("Marie-Laure", "Delignette-Muller", role = "aut", email = "m
              person("Floriane", "Larras", role = "ctb", email = "floriane.larras@ufz.de"),
              person("Aurelie", "Siberchicot", role = c("aut", "cre"), email = "aurelie.siberchicot@univ-lyon1.fr"))
 Description: Several functions are provided for dose-response (or concentration-response) characterization from omics data. 'DRomics' is especially dedicated to omics data obtained using a typical dose-response design, favoring a great number of tested doses (or concentrations, at least 5, and the more the better) rather than a great number of replicates (no need of three replicates). 'DRomics' provides functions 1) to check, normalize and or transform data, 2) to select monotonic or biphasic significantly responding items (e.g. probes, metabolites), 3) to choose the best-fit model among a predefined family of monotonic and biphasic models to describe each selected item, 4) to derive a benchmark dose or concentration and a typology of response from each fitted curve. In the available version data are supposed to be single-channel microarray data in log2, RNAseq data in raw counts, or already pretreated metabolomic data in log scale. In order to link responses across biological levels based on a common method, DRomics also handles apical data as long as they are continuous and follow a Gaussian distribution for each dose or concentration, with a common standard error. For further details see Larras et al (2018) <DOI:10.1021/acs.est.8b04752> at <https://hal.archives-ouvertes.fr/hal-02309919>.
-Depends: R (>= 3.5.0), limma, utils, grDevices, DESeq2
+Depends: R (>= 3.5.0), limma, utils, grDevices, DESeq2, SummarizedExperiment
 Imports: stats, graphics, ggplot2, scales
 Suggests: parallel, shiny, shinyBS, shinyjs, testthat
 License: GPL (>= 2)
