@@ -4,6 +4,7 @@ import(graphics)
 import(ggplot2)
 importFrom("limma", normalizeBetweenArrays, lmFit, eBayes, topTable)
 importFrom("DESeq2", rlog, vst, DESeq, results, DESeqDataSetFromMatrix)
+importFrom("SummarizedExperiment", assay)
 importFrom("utils", txtProgressBar, setTxtProgressBar, read.table)
 importFrom("grDevices", pdf, dev.off)
 importFrom("scales", pseudo_log_trans)
